basesrc: Set format to TIME if do-timestamp is TRUE

https://bugzilla.gnome.org/show_bug.cgi?id=702842